clients/EOXAppBuilder/view/apps/EOXAppBuilder/custom-components/install-manager/install-manager.scss
$eox_theme : #275362;
.install-manager{
    &--tabs{
      display: flex;
      gap: 1rem;
      font-size: 1rem;
      padding: 5px;
      div{
        padding: 10px 15px;
        border-radius: 5px;
        cursor: pointer;
        border: 1px solid $eox_theme;
      }

      &_active{
        background-color: $eox_theme !important;
        color: #fff !important;
      }
    }
    &_header{
      display: inline-flex;
      justify-content: space-between;
      align-items: center;
      margin-top: 1rem;
      gap: 10px;
      width: 100%;
      justify-content: end;

      div{
        padding: 10px;
        border-radius: 5px;
        cursor: pointer;
        border: 1px solid $eox_theme;
      }
      &--active{
        background: $eox_theme !important;
        color: #FFF !important;
      }
    }
    &_content{
      div>div:nth-child(4){
        padding-left: 15px;
      }
    }
    .install-manager-tabs{
        display: flex;
        gap: 1rem;
        align-items: center;
        margin: 10px 0px 0px 1rem;
    
        p{
          margin: 0;
          padding: 0;
          padding: 7.5px;
          border: 1px solid $eox_theme; 
          border-radius: 5px;
          cursor: pointer;
          color: $eox_theme;
        }
    
        &_active{
          background: $eox_theme !important;
          color: #FFF !important;
        }
    }
    .organizations{
      max-height: calc(100vh - 100px);
      overflow: auto;
      // padding: 1rem;
      margin: 5px 0;

      p{
        margin: 0;
        padding: 10px 7px;
        cursor: pointer;
        border-radius: 5px;
        // &:hover{
        //   background: $eox_theme6b;
        // }
      }
      &-org{
        display: flex;
        justify-content: space-between;
        align-items: center;
        border: 1px solid #8884;
        padding: 5px 10px;
        margin-bottom: 10px;
        border-radius: 5px;

        &__btn{
          display: flex;
          gap: 10px;
        }
      }
    }
    .install-manager-submission {
      button{
        float: right;
        padding: 7px 15px;
        margin-right: 1rem;
        border: none;
        background: $eox_theme;
        color: #FFF;
        cursor: pointer;
      }
    }
    .install-manager-btn{
      box-shadow: 0px 0px 4px 0px grey;
      height: 30px !important;
      width: 30px!important;
      color: #345561 !important;
      background-color: #e4e7eb !important;
      font-size: 14px !important;
      padding: 12px !important;
      border-radius: 50% !important;
      border: none;
      display: flex;
      font-size: 10px !important;
    }
    &_content{
        max-height: calc(100vh - 170px);
        overflow: auto;
        height: 100vh;
    }
    &_submit{
      float: right;
      padding: 10px 20px;
      border: none;
      background-color: #275362;
      color: #FFF;
      border-radius: 5px;
      cursor: pointer;
    }
}

